--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -17,21 +19,27 @@
         android:theme="@style/Theme.Class24Band7"
         tools:targetApi="31">
         <activity
-            android:name=".Activity_Login"
-            android:exported="true"
-            android:label="@string/title_activity_login" >
+            android:name=".Activity_Splash"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".Activity_Profile"
+            android:exported="true"
+            android:label="Activity_Profile">
 
         </activity>
+        <activity
+            android:name=".Activity_Login"
+            android:exported="true"
+            android:label="@string/title_activity_login"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
